--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -3,13 +3,20 @@ permalink: documentation/
 <div class="content">
     <div class="row">
         <div class="span14">
-            <h3>UpCloo documentation</h3>
+            <h3>UpCloo services</h3>
             <p>
-                UpCloo features:
-                <ul>
-                    <li><a href="documentation/correlations">Correlation</a></li>
-                    <li><a href="documentation/searches">Searches</a></li>
-                </ul>
+                All UpCloo parts that interacts with your business are
+                opensource. With this choice we want to demonstrate how
+                we work and our passion during code design.
+            </p>
+            <ul>
+                <li><a href="/documentation/correlations">Correlation</a></li>
+                <li><a href="/documentation/searches">Searches</a></li>
+                <li><a href="/documentation/autocomplete">Autocomplete</a></li>
+            </ul>
+            <p>
+                All UpCloo SDKs and plugins are released under MIT license where not
+                otherwise specified.
             </p>
         </div>
     </div>
