--- a/entries/index.twig
+++ b/entries/index.twig
@@ -4,6 +4,13 @@ layout: default.twig
     <section>
         <div class="row">
             <div class="span14">
+                <h1>UpCloo for developers <small>learn how you can get the best from your contents</small></h1>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="span14">
                 <h3 class="">Discover how is simple to integrate UpCloo 
                 services into your existing applications</h3>
                 <p>UpCloo is provided with a large set of SDKs and Plugins</p>
@@ -78,6 +85,7 @@ $manager->get($searchQuery);</pre>
             <div class="span14">
                 <p>
                     You can follow UpCloo <a href="http://www.upcloo.com">here</a>
+                    or if you want on <a href="http://www.upcloo.com/twitter">twitter</a>
                 </p>
             </div>
         </div>
