--- a/entries/php-sdk.twig
+++ b/entries/php-sdk.twig
@@ -7,7 +7,7 @@ permalink: php-sdk/
                 <h2>Setting up your credentials</h2>
                 <p>
                     UpCloo SDKs is designed on Singleton pattern, for
-                    more information around that design <a href="#">see on wiki</a>. 
+                    more information around that design <a href="http://en.wikipedia.org/wiki/Singleton_pattern">see on wiki</a>. 
                 </p>
                 <pre class="prettyprint linenums">
 $manager = UpCloo_Manager::getInstance();</pre>
