--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -10,9 +10,9 @@ permalink: documentation/
                 we work and our passion during code design.
             </p>
             <ul>
-                <li><a href="/documentation/correlations">Correlation</a></li>
-                <li><a href="/documentation/searches">Searches</a></li>
-                <li><a href="/documentation/autocomplete">Autocomplete</a></li>
+                <li><a href="/documentation/correlations.html">Correlation</a></li>
+                <li><a href="/documentation/searches.html">Searches</a></li>
+                <li><a href="/documentation/autocomplete.html">Autocomplete</a></li>
             </ul>
             <p>
                 All UpCloo SDKs and plugins are released under MIT license where not
