--- a/layouts/default.twig
+++ b/layouts/default.twig
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-tabs.js"></script>
         <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-twipsy.js"></script>
         <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-popover.js"></script>
+        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-alerts.js"></script>
         <script type="text/javascript" src="/scripts/default.js"></script>
         <script type="text/javascript" src="/scripts/prettify.js"></script>
         <script>
