--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -15,9 +15,36 @@ permalink: documentation/
                 <li><a href="/documentation/autocomplete.html">Autocomplete</a></li>
             </ul>
             <p>
-                All UpCloo SDKs and plugins are released under MIT license where not
+                All UpCloo SDKs and plugins are released under <a href="/mit-license.html">MIT license</a> where not
                 otherwise specified.
             </p>
+        </div>
+        <div class="span14">
+            <h3>UpCloo Fields Definition</h3>
+        </div>
+        <div class="span8">
+            <p>
+                Understanding how UpCloo treats your fields.
+            </p>
+            <ul>
+                <li>id</li>
+                <li>title</li>
+                <li>publish_date</li>
+                <li>summary</li>
+                <li>content</li>
+                <li>tag</li>
+                <li>category</li>
+            </ul>
+        </div>
+        <div class="span6">
+            <p>UpCloo dynamic fields for get more power</p>
+            <ul>
+                <li>tag</li>
+                <li>text</li>
+                <li>date</li>
+                <li>int</li>
+                <li>decimal</li>
+            </ul>
         </div>
     </div>
 </div>
