--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -11,7 +11,7 @@
                 <li class="menu">
                 <a href="#" class="menu">SDKs</a>
                 <ul class="menu-dropdown">
-                    <li><a href="/php-sdk">PHP 5.2+</a></li>
+                    <li><a href="/sdk/php.html">PHP 5.2+</a></li>
                     <li><a href="#">JavaScript</a></li>
                     <li><a href="#">Java SE5</a></li>
                     <li><a href="#">.NET C#</a></li>                    
