--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -1,6 +1,29 @@
-permalink: php-sdk/
----
 <div class="content">
+    <section>
+        <div class="row">
+            <div class="span14">
+                <h1>UpCloo PHP SDK</h1>
+            </div>
+            <div class="span8">
+                <p>Useful links</p>
+                <ul>
+                    <li>Code tags: <a target="_blank" href="https://github.com/corley/upcloo-php-sdk/tags">Download</a></li>
+                    <li>Source code: <a target="_blank" href="https://github.com/corley/upcloo-php-sdk">UpCloo PHP SDK.</a></li>
+                    <li>Archives: <a target="_blank" href="https://github.com/corley/upcloo-php-sdk/downloads">PHAR packages</a></li>
+                </ul>
+                <p>UpCloo PHP SDK is released under MIT license. <a href="/mit-license.html">See here</a></p>
+            </div>
+            <div class="span6">
+                <p>For any problem you can send a tickey using the tracker.<p>
+                <ul>
+                    <li><a target="_blank" href="https://github.com/corley/upcloo-php-sdk/issues">Bug Tracker</a></li>
+                </ul>
+            </div>
+            <div class="span14">
+                <p>Now you are ready to use UpCloo PHP SDK.</p>
+            </div>
+        </div>
+    </section>
     <section>
         <div class="row">
             <div class="span14">
@@ -76,8 +99,18 @@ $response = $manager->index(
                             <li>The body of your article/post etc.</li>
                         </ul>
                     </li>
-                    <li><code>tag</code></li>
-                    <li><code>category</code></li>
+                    <li>
+                        <code>tag</code>
+                        <ul>
+                            <li>A list of marker for this content</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <code>category</code>
+                        <ul>
+                            <li>A list of categories for this content</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="span6">
