--- a/layouts/default.twig
+++ b/layouts/default.twig
@@ -6,43 +6,18 @@
         <meta name="description" content="UpCloo Developers">
         <meta name="author" content="Corley S.r.l.">
 
-        <!-- HTML5 shim, for IE6-8 support of HTML elements -->
-        <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-
         <!-- styles -->
-        <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+        <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"">
+        <style type="text/css">
+          body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+          }
+        </style>
+        <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/styles/default.css">
         <link rel="stylesheet" type="text/css" href="/styles/prettify.css">
 
-        <!-- scripts -->
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-modal.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-dropdown.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-scrollspy.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-tabs.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-twipsy.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-popover.js"></script>
-        <script type="text/javascript" src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-alerts.js"></script>
-        <script type="text/javascript" src="/scripts/default.js"></script>
-        <script type="text/javascript" src="/scripts/prettify.js"></script>
-        <script>
-            $(document).ready(function () {
-                prettyPrint();
-            
-                $('.topbar').dropdown()
-                            .scrollSpy()
-                $('.tabs').tabs()
-                $("a[rel=twipsy]").twipsy({
-                    live: true
-                })
-                $("a[rel=popover]").popover({
-                }).click(function(e) {
-                    e.preventDefault()
-                })
-            });
-        </script>
     </head>
     <body>
         {% include 'layouts/topbar.twig'%}
@@ -50,6 +25,32 @@
             {{ content }}
             {% include 'layouts/footer.twig'%}
         </div>
+        <!-- scripts -->
+        <!-- Le javascript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="http://twitter.github.com/bootstrap/assets/js/jquery.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-transition.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-alert.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-modal.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-scrollspy.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tab.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tooltip.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-popover.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-button.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
+        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script>
+        <script type="text/javascript" src="/scripts/default.js"></script>
+        <script type="text/javascript" src="/scripts/prettify.js"></script>
+        <script>
+            $(document).ready(function () {
+                prettyPrint();
+            
+                $('.dropdown-toggle').dropdown()
+            });
+        </script>
     </body>
 </html>
 
