--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -1,34 +1,49 @@
-<div class="topbar">
-    <div class="fill">
+<div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
         <div class="container">
             <a class="brand" href="/">UpCloo developers</a>
-            <form action="http://www.google.com/search?ie=UTF-8&" method="GET">
-                <input type="text" placeholder="Search" name="q" value=""/>
-            </form>
-            <ul class="nav secondary-nav">
-                <li><a href="/documentation">Documentation</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li class="menu">
-                <a href="#" class="menu">SDKs</a>
-                <ul class="menu-dropdown">
-                    <li><a href="/sdk/php.html">PHP 5.2+</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                    <li><a href="#">Java SE5</a></li>
-                    <li><a href="#">.NET C#</a></li>                    
-                    <li class="divider"></li>
-                    <li><a href="#">iOS 4.2+</a></li>
-                    <li><a href="#">Android 2.1+</a></li>
+            <ul class="nav">
+              <li class="active"><a href="/mit-license.html">License</a></li>
+              <li class="dropdown" id="menu1">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+                  Dropdown
+                  <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
                 </ul>
-                </li>
-                <li class="menu">
-                    <a href="#" class="menu">Apps</a>
-                    <ul class="menu-dropdown">
-                        <li><a href="#">WordPress</a></li>
-                        <li><a href="#">Joomla!</a></li>
-                        <li><a href="#">Drupal</a></li>
-                        <li><a href="#">Typo3</a></li>
+              </li>
+            </ul>
+            <ul class="nav pull-right">
+                <li class="active"><a href="/documentation">Documentation</a></li>
+                <li class="dropdown" id="menu2">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
+                        SDKs
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Liferay</a></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown" id="menu3">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu3">
+                        Applications
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
                     </ul>
                 </li>
             </ul>
