Added one page on wp

--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -1,10 +1,11 @@
 <div class="content">
     <section>
         <div class="row">
-            <div class="span14">
+            <div class="span12">
                 <h1>UpCloo PHP SDK</h1>
+                <p>&nbsp;</p>
             </div>
-            <div class="span8">
+            <div class="span6">
                 <p>Useful links</p>
                 <ul>
                     <li>Code tags: <a target="_blank" href="https://github.com/corley/upcloo-php-sdk/tags">Download</a></li>
@@ -19,14 +20,14 @@
                     <li><a target="_blank" href="https://github.com/corley/upcloo-php-sdk/issues">Bug Tracker</a></li>
                 </ul>
             </div>
-            <div class="span14">
+            <div class="span12">
                 <p>Now you are ready to use UpCloo PHP SDK.</p>
             </div>
         </div>
     </section>
     <section>
         <div class="row">
-            <div class="span14">
+            <div class="span12">
                 <h2>Setting up your credentials</h2>
                 <p>
                     UpCloo SDKs is designed on Singleton pattern, for
@@ -59,7 +60,7 @@ $response = $manager->index(
                     is a good choice.
                 </p>
             </div>
-            <div class="span14">
+            <div class="span12">
                 <p>
                     UpCloo works using a cloud based NOSQL database and for that
                     reason you can indexing a moltitude of fields, a fixed structure 
@@ -67,7 +68,7 @@ $response = $manager->index(
                     full list of fixed tags is here:
                 </p>
             </div>
-            <div class="span8">
+            <div class="span6">
                 <ul>
                     <li><code>id</code>
                         <ul>
@@ -131,7 +132,7 @@ $response = $manager->index(
                     <li><code>decimal</code> floating point number</li>
                 </ul>
             </div>
-            <div class="span14">
+            <div class="span12">
                 <h2>Retrive indexed contents</h2>
                 <p>
                     After a content indexing you can retrive it's correlation
