--- a/entries/blog.twig
+++ b/entries/blog.twig
@@ -1,9 +1,11 @@
 permalink: blog/
 ---
 <div class="content">
-    <div class="row">
-        <div class="span14">
-            <p>Welcome to blog...</p>
+    <section>
+        <div class="row">
+            <div class="span12">
+                <p>Welcome to blog...</p>
+            </div>
         </div>
-    </div>
+    </section>
 </div>
