--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -4,21 +4,9 @@
             <a class="brand" href="/">UpCloo developers</a>
             <ul class="nav">
               <li class="active"><a href="/mit-license.html">License</a></li>
-              <li class="dropdown" id="menu1">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
-                  Dropdown
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </li>
             </ul>
             <ul class="nav pull-right">
+                <li><a href="/blog">Blog</a></li>
                 <li class="active"><a href="/documentation">Documentation</a></li>
                 <li class="dropdown" id="menu2">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
@@ -27,10 +15,13 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/sdk/php.html">PHP 5.2+</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Java SE5</a></li>
+                        <li><a href="#">.NET C#</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">JavaScript</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">iOS 4.2+</a></li>
+                        <li><a href="#">Android 2.1+</a></li>
                     </ul>
                 </li>
                 <li class="dropdown" id="menu3">
@@ -40,10 +31,11 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/application/wordpress.html">WordPress</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Joomla!</a></li>
+                        <li><a href="#">Drupal</a></li>
+                        <li><a href="#">Typo3</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">Liferay</a></li>
                     </ul>
                 </li>
             </ul>
