--- a/entries/blog.twig
+++ b/entries/blog.twig
@@ -7,8 +7,8 @@ providers:
     <section>
         <div class="row">
             <div class="span12">
-                <h1>Blog</h1>
-                <p>
+                <h1>UpCloo Developers Blog.</h1>
+                <p class="lead">
                     UpCloo is a cloud based and fully hosted
                     indexing engine that helps you to create incredible
                     and automatic correlations between contents of your website.
