--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -20,6 +20,33 @@ permalink: documentation/
             </p>
         </div>
         <div class="span12">
+            <h3>UpCloo Operations</h3>
+        </div>
+        <div class="span12">
+            <p>
+                UpCloo is designed around an index that works. You can
+                interact with this index using dedicated <a href="/documentation/xml-rest-service.html">XML REST service</a>.
+            </p>
+            <ul>
+                <li>Retrive</li>
+                <li>Insert</li>
+                <li>Update</li>
+                <li>Delete</li>
+            </li>
+        </div>
+        <div class="span12">
+            <h3>UpCloo Types Definition</h3>
+        </div>
+        <div class="span12">
+            <ul>
+                <li><a href="/documentation/types/string.html">string</a></li>
+                <li><a href="/documentation/types/integer.html">Integer</a></li>
+                <li><a href="/documentation/types/decimal.html">Decimal</a></li>
+                <li><a href="/documentation/types/dates-times.html">Dates and Times</a></li>
+                <li><a href="/documentation/types/texts.html">Texts</a></li>
+            </ul>
+        </div>
+        <div class="span12">
             <h3>UpCloo Fields Definition</h3>
         </div>
         <div class="span6">
@@ -28,10 +55,10 @@ permalink: documentation/
             </p>
             <ul>
                 <li><a href="/documentation/fields/id.html">id</a></li>
-                <li>title</li>
-                <li>publish_date</li>
-                <li>summary</li>
-                <li>content</li>
+                <li><a href="/documentation/fields/title.html">title</a></li>
+                <li><a href="/documentation/fields/publish-date.html">publish date</a></li>
+                <li><a href="/documentation/fields/summary.html">summary</a></li>
+                <li><a href="/documentation/fields/content.html">content</a></li>
                 <li>tag</li>
                 <li>category</li>
             </ul>
