--- a/entries/documentation/fields/content.twig
+++ b/entries/documentation/fields/content.twig
@@ -1,6 +1,6 @@
 providers:
     fieldSpec:
         provider: FieldSpecification
-        fieldName: id
+        fieldName: content
 ---
 {% include 'easy.twig' %}
