--- a/entries/documentation/fields/publish-date.twig
+++ b/entries/documentation/fields/publish-date.twig
@@ -1,6 +1,6 @@
 providers:
     fieldSpec:
         provider: FieldSpecification
-        fieldName: id
+        fieldName: publish_date
 ---
 {% include 'easy.twig' %}
