--- a/entries/index.twig
+++ b/entries/index.twig
@@ -1,13 +1,14 @@
 layout: default.twig
 ---
 <div class="content">
-    <section>
+    <header>
         <div class="row">
             <div class="span12">
-                <h1>UpCloo for developers <small>learn how you can get the best from your contents</small></h1>
+                <h1>UpCloo for developers</h1>
+                <p class="lead">Learn how you can get the best from your contents</p>
             </div>
         </div>
-    </section>
+    </header>
     <section>
         <div class="row">
             <div class="span12">
@@ -82,8 +83,8 @@ $manager->get($searchQuery);</pre>
         <div class="row">
             <div class="span12">
                 <p>
-                    You can follow UpCloo <a href="http://www.upcloo.com">here</a>
-                    or if you want on <a href="http://www.upcloo.com/twitter">twitter</a>
+                    You can follow UpCloo <a target="_blank" href="http://www.upcloo.com">here</a>
+                    or if you want on <a target="_blank" href="http://www.upcloo.com/twitter">twitter</a>
                 </p>
             </div>
         </div>
