--- a/entries/mit-license.twig
+++ b/entries/mit-license.twig
@@ -1,9 +1,15 @@
 <div class="content">
-    <section>
+    <header>
         <div class="row">
             <div class="span12">
                 <h1>UpCloo OpenSource license</h1>
-                <p>Alll UpCloo OpenSource code are released under MIT license if not otherwise specified.</p>
+                <p class="lead">Alll UpCloo OpenSource code are released under MIT license if not otherwise specified.</p>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div class="row">
+            <div class="span12">
                 <pre class="prettyprint">
 Copyright (c) &lt;2012&gt; &lt;Corley S.r.l.&gt;
 
