--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -38,6 +38,15 @@
                         <li><a href="#">Liferay</a></li>
                     </ul>
                 </li>
+                <li class="dropdown" id="tools">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#tools">
+                        Tools
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/tools/remote-importer.html">Remote Importer</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
