--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -3,9 +3,12 @@
         <div class="row">
             <div class="span12">
                 <h1>UpCloo WordPress Plugin</h1>
-                <p>&nbsp;</p>
+                <p class="lead">
+                    WordPress plugin allows a complete integration with
+                    UpCloo services. 
+                </p>
             </div>
-            <div class="span6">
+            <div class="span6" id="download">
                 <p>Useful links</p>
                 <ul>
                     <li>Archives: <a target="_blank" href="https://github.com/corley/upcloo-wordpress-plugin/downloads">Download</a></li>
@@ -20,14 +23,64 @@
                     <li><a target="_blank" href="https://github.com/corley/upcloo-wordpress-plugin/issues">Bug Tracker</a></li>
                 </ul>
             </div>
-            <div class="span12">
-                <p>Now you are ready to use UpCloo WordPress Plugin.</p>
-            </div>
         </div>
     </section>
     <section>
         <div class="row">
             <div class="span12">
+                <h2>Install UpCloo Plugin</h2>
+                <p>Download the plugin using dedicated links <a href="#download">here</a>.</p>
+                <ul>
+                    <li>Upload the wp-upcloo folder into your WordPress plugin folder.</li>
+                    <li>Activate UpCloo plugin through Plugin Web Interface</li>
+                    <li>That's all it is.</li>
+                </ul>
+                <h3>Configure the plugin</h3>
+                <p>
+                    UpCloo create a new menu tree. Use that menu for handling your personal settings.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="remote-importer">
+        <div class="row">
+            <div class="span12">
+                <h2>Enable remote importer</h2>
+                <p>
+                    At first time UpCloo have to move your contents into the 
+                    Corley Cloud system. For that reason you have to enable 
+                    the meta tag exposure system that show into your public 
+                    HTML page sensible information of your posts. In that way 
+                    the UpCloo spider can read information and import your 
+                    contents without any connection with your internal structure.
+                </p>
+                <p>For more information on remote importer <a href="/tools/remote-importer.html">see here</a></p>
+            </div>
+            <div class="span12">
+                <h3>Tag exposed</h3>
+                <p>
+                    UpCloo expose, if you enable it, a list of information
+                    that enable remote UpCloo daemons to crawl your website
+                    and get useful information for index generation.
+                </p>
+                <p>Minimal requirement:</p>
+                <pre class="prettyprint linenums">
+&lt;!-- UPCLOO_POST_ID post_1088 UPCLOO_POST_ID --&gt;
+&lt;!-- UPCLOO_POST_TITLE Zend\Di impressioni - ZF2 UPCLOO_POST_TITLE --&gt;</pre>
+                <p>
+                    A complex example:
+                </p>
+                <pre class="prettyprint linenums">
+&lt;!-- UPCLOO_POST_ID post_1088 UPCLOO_POST_ID --&gt;
+&lt;!-- UPCLOO_POST_TYPE post UPCLOO_POST_TYPE --&gt;
+&lt;!-- UPCLOO_POST_TITLE Zend\Di impressioni - ZF2 UPCLOO_POST_TITLE --&gt;
+&lt;!-- UPCLOO_POST_PUBLISH_DATE 2012-01-08T15:25:42Z UPCLOO_POST_PUBLISH_DATE --&gt;
+&lt;!-- UPCLOO_POST_AUTHOR Walter Dal Mut UPCLOO_POST_AUTHOR --&gt;
+&lt;!-- UPCLOO_POST_DYNAMIC_TAG_LIST me,you UPCLOO_POST_DYNAMIC_TAG_LIST --&gt;
+&lt;!-- UPCLOO_POST_DYNAMIC_TAG_ME one, two UPCLOO_POST_DYNAMIC_TAG_ME --&gt;
+&lt;!-- UPCLOO_POST_DYNAMIC_TAG_YOU one, two UPCLOO_POST_DYNAMIC_TAG_YOU --&gt;  
+&lt;!-- UPCLOO_POST_TAGS Dependency Injection,DiC,php,zend,Zend\Di,Zend_Di,zf2 UPCLOO_POST_TAGS --&gt;
+&lt;!-- UPCLOO_POST_CATEGORIES Applicazioni,PHP,Tests UPCLOO_POST_CATEGORIES --&gt;</pre>
             </div>
         </div>
     </section>
