--- a/entries/documentation/fields/title.twig
+++ b/entries/documentation/fields/title.twig
@@ -1,6 +1,6 @@
 providers:
     fieldSpec:
         provider: FieldSpecification
-        fieldName: id
+        fieldName: title
 ---
 {% include 'easy.twig' %}
