--- a/entries/index.twig
+++ b/entries/index.twig
@@ -1,15 +1,17 @@
 layout: default.twig
 ---
 <div class="content">
-    <header>
+    <header class="start">
         <div class="row">
-            <div class="span12">
-                <h1>UpCloo for developers</h1>
-                <p class="lead">Learn how you can get the best from your contents</p>
+            <div class="span6">
+                <h1 class="lead">Learn how you can get the best from your contents.</h1>
+            </div>
+            <div class="span6">
+                <img src="/media/img/t.png" alt="upcloo-logo" class="pull-right"/>
             </div>
         </div>
     </header>
-    <section>
+    <section class="start">
         <div class="row">
             <div class="span12">
                 <h3 class="">Discover how is simple to integrate UpCloo 
