--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -3,7 +3,7 @@
         <div class="container">
             <a class="brand" href="/">UpCloo developers</a>
             <ul class="nav">
-              <li class="active"><a href="/mit-license.html">License</a></li>
+              <li><a href="/mit-license.html">License</a></li>
             </ul>
             <ul class="nav pull-right">
                 <li><a href="/blog">Blog</a></li>
