--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -122,7 +122,7 @@ $response = $manager->index(
                     instead.
                 </p>
                 <p>
-                    Only four type of dynamic tags are available at this 
+                    Only five type of dynamic tags are available at this 
                     time:
                 </p>
                 <ul>
@@ -130,6 +130,7 @@ $response = $manager->index(
                     <li><code>date</code> date (ISO8601)</li>
                     <li><code>int</code> integer number</li>
                     <li><code>decimal</code> floating point number</li>
+                    <li><code>date</code> date and time (ISO8601)</li>
                 </ul>
             </div>
             <div class="span12">
