--- a/styles/default.css
+++ b/styles/default.css
@@ -1,1 +1,34 @@
 .footer {border-top: 1px solid #e5e5e5; margin-top:45px; padding: 35px 0 36px;}
+
+section.start {margin: 36px 0 27px; }
+header.start {padding: 36px 0 27px; border-bottom: 1px solid #e5e5e5;}
+
+.date-box {
+	display: block;
+	float: left;
+	padding: 6px 8px;
+	margin-right: 6px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	width: 30px;
+	background: 
+	#E8E8E8;
+	color: 
+	#999;
+}
+
+.date-box span {
+	line-height: 1.3;
+	display: block;
+	text-align: center;
+	text-shadow: 0 1px 0 
+	rgba(255, 255, 255, 1);
+}
+
+.date-box .day {
+	font-weight: bold;
+	color: 
+	#777;
+	font-size: 115%;
+}
