--- a/entries/index.twig
+++ b/entries/index.twig
@@ -5,6 +5,7 @@ layout: default.twig
         <div class="row">
             <div class="span6">
                 <h1 class="lead">Learn how you can get the best from your contents.</h1>
+                <h1 class="lead">For all operating systems, for all platforms.</h1>
             </div>
             <div class="span6">
                 <img src="/media/img/t.png" alt="upcloo-logo" class="pull-right"/>
@@ -14,7 +15,7 @@ layout: default.twig
     <section class="start">
         <div class="row">
             <div class="span12">
-                <h3 class="">Discover how is simple to integrate UpCloo 
+                <h3 class="">Discover how it's simple to integrate UpCloo 
                 services into your existing applications</h3>
                 <p>UpCloo is provided with a large set of SDKs and Plugins</p>
             </div>
