Added base and commits

--- a/entries/index.twig
+++ b/entries/index.twig
@@ -3,7 +3,7 @@ layout: default.twig
 <div class="content">
     <header class="start">
         <div class="row">
-            <div class="span6">
+            <div class="span6 head-index-text">
                 <h1 class="lead">Learn how you can get the best from your contents.</h1>
                 <h1 class="lead">For all operating systems, for all platforms.</h1>
             </div>
