--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -1,3 +1,12 @@
+providers:
+    sdk:
+        provider: Sdk
+        platform: php
+        issues: https://api.github.com/repos/corley/upcloo-php-sdk/issues
+    commits:
+        provider: Commit
+        api: https://api.github.com/repos/corley/upcloo-php-sdk/commits
+---
 <div class="content">
     <section>
         <div class="row">
@@ -5,8 +14,16 @@
                 <h1>UpCloo PHP SDK</h1>
                 <p>&nbsp;</p>
             </div>
+            <div class="span6">
+                <h2>Issues list</h2>
+                {% include 'issues.twig' %}
+            </div>
+            <div class="span6">
+                <h2>Latest Updates</h2>
+                {% include 'commits.twig' %}
+            </div>
             <div class="span6" id="download">
-                <p>Useful links</p>
+                <h2>Useful links</h2>
                 <ul>
                     <li>Code tags: <a target="_blank" href="https://github.com/corley/upcloo-php-sdk/tags">Download</a></li>
                     <li>Source code: <a target="_blank" href="https://github.com/corley/upcloo-php-sdk">UpCloo PHP SDK.</a></li>
