--- a/styles/default.css
+++ b/styles/default.css
@@ -2,6 +2,7 @@
 
 section.start {margin: 36px 0 27px; }
 header.start {padding: 36px 0 27px; border-bottom: 1px solid #e5e5e5;}
+.head-index-text {margin-top: 36px; margin-bottom: 27px;}
 
 .date-box {
 	display: block;
