--- a/entries/index.twig
+++ b/entries/index.twig
@@ -20,9 +20,32 @@ layout: default.twig
                 <p>UpCloo is provided with a large set of SDKs and Plugins</p>
             </div>
         </div>
+        <div class="row">
+            <div class="span6">
+                <img src="/media/img/icon-github.png" alt="github" class="icon-left"/>
+                <h3>Open-source</h3>
+                <p>
+                    All UpCloo plugins and tools for integration with
+                    your business is released as Open-source project for
+                    give to you the ability to evaluate us. See all projects
+                    on <a href="https://github.com/corley">Github</a>.
+                </p>
+            </div>
+            <div class="span6">
+                <img src="/media/img/icon-twitter.png" alt="twitter" class="icon-left"/>
+                <h3>Twitter for Updates</h3>
+                <p>
+                    Follow us on <a href="https://www.twitter.com/CorleyCloud">Twitter</a>
+                    for get all the latest news on UpCloo.
+                </p>
+            </div>
+        </div>
     </section>
     <section>
         <div class="row">
+            <div class="span12">
+                <h3>UpCloo Correlation connects your contents together.</h3>
+            </div>
             <div class="span6">
                 <pre class="prettyprint linenums">
     $manager = UpCloo_Manager::getInstance(); // Retrive the manager
