--- a/styles/default.css
+++ b/styles/default.css
@@ -33,3 +33,5 @@ header.start {padding: 36px 0 27px; border-bottom: 1px solid #e5e5e5;}
 	#777;
 	font-size: 115%;
 }
+
+.icon-left { float:left; margin:4px 5px 0 0; }
