--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -19,10 +19,15 @@ permalink: documentation/
                 otherwise specified.
             </p>
         </div>
-        <div class="span12">
+    </div>
+    <div class="row">
+        <div class="span6">
             <h3>UpCloo Operations</h3>
         </div>
-        <div class="span12">
+        <div class="span6">
+            <h3>UpCloo Types Definition</h3>
+        </div>
+        <div class="span6">
             <p>
                 UpCloo is designed around an index that works. You can
                 interact with this index using dedicated <a href="/documentation/xml-rest-service.html">XML REST service</a>.
@@ -34,10 +39,11 @@ permalink: documentation/
                 <li>Delete</li>
             </li>
         </div>
-        <div class="span12">
-            <h3>UpCloo Types Definition</h3>
-        </div>
-        <div class="span12">
+        <div class="span6">
+            <p>
+                UpCloo use a NOSQL database. Our database is strongly-typed and you 
+                have to use a correct field type for all your injections. 
+            </p>
             <ul>
                 <li><a href="/documentation/types/string.html">string</a></li>
                 <li><a href="/documentation/types/integer.html">Integer</a></li>
@@ -46,8 +52,13 @@ permalink: documentation/
                 <li><a href="/documentation/types/texts.html">Texts</a></li>
             </ul>
         </div>
-        <div class="span12">
+    </div>
+    <div class="row">
+        <div class="span6">
             <h3>UpCloo Fields Definition</h3>
+        </div>
+        <div class="span6">
+            <h3>UpCloo Dynamic Fields</h3>
         </div>
         <div class="span6">
             <p>
