--- a/entries/index.twig
+++ b/entries/index.twig
@@ -25,8 +25,8 @@ layout: default.twig
                 <img src="/media/img/icon-github.png" alt="github" class="icon-left"/>
                 <h3>Open-source</h3>
                 <p>
-                    All UpCloo plugins and tools for integration with
-                    your business is released as Open-source project for
+                    All UpCloo plugins and tools for
+                    your business is released as Open-source projects for
                     give to you the ability to evaluate us. See all projects
                     on <a href="https://github.com/corley">Github</a>.
                 </p>
