--- a/entries/blog.twig
+++ b/entries/blog.twig
@@ -24,6 +24,9 @@ providers:
                     <a target="_blank" href="{{ entry.link }}">{{ entry.title }}</a>
                 </div>
             {% endfor %}
+                <div class="span8" style="margin-top: 36px">
+                    <p><a target="_blank" href="http://www.corley.it/blog">See all posts on Corley Blog</a></p>
+                </div>
             </div>
             <div class="span4">
                 <h4>Search (UpCloo Search)</h4>
