--- a/entries/sdk/github.twig
+++ b/entries/sdk/github.twig
@@ -3,7 +3,7 @@
     <ul>
         <li>Code tags: <a target="_blank" href="{{ this.providers.sdk.tags }}">Download Tags</a></li>
         <li>Source code: <a target="_blank" href="{{ this.providers.sdk.sourcecode }}">See Tree</a></li>
-        <li>Archives: <a target="_blank" href="{{ this.providers.sdk.download }}">Packages Downlaod</a></li>
+        <li>Archives: <a target="_blank" href="{{ this.providers.sdk.download }}">Packages Download</a></li>
     </ul>
     <p>UpCloo PHP SDK is released under MIT license. <a href="/mit-license.html">See here</a></p>
 </div>
